<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/contactgraphic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conatct"
        android:textColor="@color/black"
        android:layout_below="@id/imageView5"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="130dp"/>

    <Button
        android:id="@+id/call_us"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/normal_button"
        android:text="@string/call"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_below="@id/textView2"/>
    <Button
        android:id="@+id/email_us"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/normal_button"
        android:text="@string/website"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_below="@id/call_us"/>
    <Button
        android:id="@+id/instagram_contact"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/normal_button"
        android:text="@string/insta"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_below="@id/email_us"/>


</RelativeLayout>