<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmActivity"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <TextView
                android:text="@string/ddonation"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:id="@+id/textViewGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="2"
                android:textColor="@color/black"/>




        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <TextView
                android:text="@string/name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:id="@+id/address_view"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="@color/black"/>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout2"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <TextView
                android:text="@string/daddress"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:id="@+id/number_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="2"
                android:textSize="30dp"
                android:textColor="@color/black"/>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/relativeLayout4">


            <Button
                android:id="@+id/call_user"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/normal_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/dcall"
                android:textSize="25dp"
                android:textColor="@color/white" />

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>